--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <title>Document</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <title>Blogue</title>
     </head>
     <body>
         <h1>BLOGUE</h1>
-        <h6>a community of overthinkers</h6>
+        <h6>A Community of Overthinkers</h6>
         <div id="post">
             <h2>WHAT'S ON YOUR MIND?</h2>
+            <form action="" method=""> 
+                <label for="journalInput"> Your Entry</label><br><br>
+                <textarea id="journalInput" name="Your Entry" rows="15" cols="80" placeholder="Fill in your thoughts...">
+               
+                </textarea>
+
+            </form>
+            
         </div>
         <div id="entries">
             <h2>WHAT'S EVERYONE ELSE THINKING?</h2>
