change id for gif search

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                 ><br />
                 <div id="inputCount">0/2000</div>
                 <label for="giphy">Gif URL</label>
-                <input id="searchBox" type="search" />
+                <input id="giphy" name="giphy" type="search" />
                 <button onclick="sendApiRequest()" class="gif-button">
+                    <!-- check if putting a function on onclick works? -->
                     Add GIF
                 </button>
                 <button class="submit" type="submit">SUBMIT</button>
