--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div id="inputCount">0/2000</div>
                 <label for="giphy">Gif URL</label>
                 <input id="giphy" name="giphy" type="search" />
+                <div id="gifContainer"></div>
                 <button onclick="sendApiRequest()" class="gif-button">
                     <!-- check if putting a function on onclick works? -->
                     Add GIF
