--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
         <script defer src="bundle.js"></script>
         <script defer src="assets/js/index.js"></script>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="assets/images/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="assets/images/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="assets/images/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <title>Blogue</title>
     </head>
     <body>
