add layout testing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         <title>Blogue</title>
     </head>
     <body>
-        <h1>BLOGUE</h1>
-        <h6>A Community of Overthinkers</h6>
+        <header>
+            <h1>BLOGUE</h1>
+            <h6>A Community of Overthinkers</h6>
+        </header>
         <div class="button">
             <button
                 class="navigate"
