--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     placeholder="What's on your mind?..."
                     id="journalInput"
                     name="journalInput"
-                    rows="9"
-                    cols="90"
-                    maxlength="750"
+                    rows="7"
+                    cols="80"
+                    maxlength="500"
                     required
                 ></textarea
                 ><br />
-                <div id="inputCount">0/750</div>
+                <div id="inputCount">0/500</div>
                 <label for="giphy">Gif URL</label>
                 <input id="giphy" name="giphy" type="search" />
                 <div id="gifContainer"></div>
@@ -85,8 +85,8 @@
             </form>
         </div>
         <div id="entries">
-            <h2>WHAT'S EVERYONE ELSE THINKING?</h2>
-            <section id="postsContainer"></section>
+            <h3>WHAT'S EVERYONE ELSE THINKING?</h3>
+            <div id="postsContainer"></div>
         </div>
     </body>
 </html>
