all fetch to server working

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <label for="giphy">Gif URL</label>
                 <input id="giphy" name="giphy" type="search" />
                 <div id="gifContainer"></div>
-                <button onclick="sendApiRequest()" class="gif-button">
+                <button onclick="sendApiRequest()" id="gif-button">
                     <!-- check if putting a function on onclick works? -->
                     Add GIF
                 </button>
