gifs added to posts

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <div id="inputCount">0/500</div>
                 <label for="giphy">Gif URL</label>
                 <input id="giphy" name="giphy" type="search" />
-                <div id="gifContainer"></div>
+                <div id="gifContainer">
+                    <img id="gifPreview" src="">
+                </div>
                 <button onclick="sendApiRequest()" id="gif-button">
                     <!-- check if putting a function on onclick works? -->
                     Add GIF
