--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             sizes="16x16"
             href="assets/images/favicon/favicon-16x16.png"
         />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="assets/css/media-queries.css"/>
         <!-- <link rel="manifest" href="/site.webmanifest" /> -->
         <title>Blogue</title>
     </head>
