--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div id="post">
             <h3>WHAT'S ON YOUR MIND?</h3>
             <form id="new-post-form">
-                <label for="subject"> Your Entry</label><br /><br />
+                <label for="subject">SHARE YOUR <span id="spin"></span></span></label
+                ><br /><br />
                 Subject:
                 <input
                     type="text"
@@ -95,9 +96,8 @@
                         id="gif-button"
                         type="button"
                     >
-                        <!-- check if putting a function on onclick works? -->
-                        Add GIF
-                    </button>
+                        Add GIF</button
+                    ><br />
                     <div id="gifContainer">
                         <img id="gifPreview" src="" />
                     </div>
