fix back to top button on media queries

--- a/index.html
+++ b/index.html
@@ -110,11 +110,14 @@
             <h3>WHAT'S EVERYONE THINKING?</h3>
             <div id="postsContainer"></div>
         </div>
+        <div id= "backButton"></div>
         <button
         class="backToTop"
         onClick="document.querySelector('h1').scrollIntoView();"
     >
         Back to top
     </button>
+</div>
+    </body>
     </body>
 </html>
